# Uboot

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SKILLS_INSTALLATION.md  Uboot.sln  Uboot.spec
.agents/skills/: README.md
.bob/skills/learn/: SKILL.md
.bob/skills/review-skill/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.cpp  main.py  runtime_paths.py  settings.py
app/orchestrator/: __init__.py  evidence.py  llm_advisor.py  main.py  remediation.py  reporting.py  scanner.py  scoring.py  snapshot.py
app/resources/: resource.h  uboot.rc
cli/: main.cpp
core/backup/: BackupStore.cpp
core/enumerators/: RunRegistryCollector.cpp  ScheduledTasksCollector.h  StartupFolderCollector.cpp  StartupFolderCollector.h  WmiPersistenceCollector.h
core/evidence/: authenticode.h  hashing.h
core/hardening/: DependencyAnalyzer.cpp
core/model/: CollectorError.h  Entry.h
core/normalize/: CommandNormalizer.cpp
core/ops/: OperationFactory.cpp  RegistryRenameValueOp.cpp  TaskToggleEnabledOp.cpp
core/resolve/: LnkResolver.h
core/runner/: CollectorRunner.cpp  CollectorRunner.h
core/scoring/: RulesLoader.h  ScoringEngine.cpp  SignalRegistry.h  ThresholdClassifier.h
core/tx/: IOperation.h  Transaction.cpp
core/util/: CliArgs.cpp  CliArgs.h  GlobalLock.h
docs/: ARCHITECTURE.md  OSS_TRUST_POLICY.md  SIGNING.md  UI_WIN32_GUIDE.md  WINDOWS_DISTRIBUTION.md  ui-wireframe.md
docs/archive/evidence_wip/: README.md  entry_evidence.cpp  file_probe.h  hashing.cpp  version_info.h
docs/archive/scoring_wip/: FutureStubs.h  IScoringStrategy.h
docs/archive/scoring_wip/evaluators/: InvalidSignatureEvaluator.h  (+1 more)
scripts/: build.ps1  install-skills.ps1  package.ps1  scan.ps1
scripts/ci/: check-public-repo.py  check-release-naming.py  check-version-consistency.py  validate_release_identity.py  validate_repo_public.py
scripts/windows/: build-release.ps1  claude-profile.ps1  sign-file.ps1  sign-release.ps1  uboot-installer.iss
snapshots/: snapshot_2026-04-13T16-44-55.715910_ui-scan.json  snapshot_2026-04-13T16-48-39.861397_ui-scan.json  snapshot_2026-04-13T16-48-45.552707_ui-scan.json  snapshot_2026-04-13T16-50-34.611087_ui-scan.json  snapshot_2026-04-13T17-00-19.092436_ui-scan.json
src/Uboot.Analysis/: AnalysisEngine.cs  Uboot.Analysis.csproj
src/Uboot.App/: App.axaml  App.axaml.cs  Program.cs  Uboot.App.csproj  app.manifest
src/Uboot.App/ViewModels/: MainWindowViewModel.cs
src/Uboot.App/Views/: MainWindow.axaml  MainWindow.axaml.cs
src/Uboot.Cli/: Program.cs  Uboot.Cli.csproj  Usings.cs
src/Uboot.Collectors.Windows/: HashService.cs  SignatureService.cs  Uboot.Collectors.Windows.csproj  WindowsPlatformGate.cs
src/Uboot.Collectors.Windows/Collectors/: RunRegistryCollector.cs  ServicesCollector.cs  StartupFolderCollector.cs
src/Uboot.Collectors.Windows/Helpers/: CommandNormalizer.cs
src/Uboot.Core/: Uboot.Core.csproj
src/Uboot.Core/Interfaces/: IAnalysisEngine.cs  ICollector.cs  IExportService.cs  IHashService.cs  IPlatformGate.cs  ISignatureService.cs  ISnapshotRepository.cs
src/Uboot.Core/Models/: ActionType.cs  Classification.cs  DiffState.cs  Entry.cs  EntryScope.cs  EntrySource.cs  Evidence.cs  Finding.cs  Snapshot.cs  SnapshotDiff.cs  SuggestedAction.cs  UndoInformation.cs
src/Uboot.Core/Services/: ExportService.cs  SnapshotRepository.cs
src/Uboot.Online/: DnsService.cs  Uboot.Online.csproj  VirusTotalService.cs  WhoisService.cs
src/uboot-collector/: .gitignore  00_START_HERE.md  ARCHITECTURE.md  CHEATSHEET.md  CMakeLists.txt  COMPILATION.md  COMPLETION_SUMMARY.md  FILEMAP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_EXAMPLES.cpp  MVP_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build-collector.ps1  build_log.txt  build_log_10.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_9.txt  cmake_out.txt  main.cpp  rules_v1.json  test_normalizer.cpp
src/uboot-collector/collectors/: ICollector.h  IfeoDebuggerCollector.cpp  IfeoDebuggerCollector.h  RunRegistryCollector.h  ScheduledTasksCollector.cpp  ServicesCollector.cpp  ServicesCollector.h  StartupFolderCollector.cpp  WinlogonCollector.cpp  WinlogonCollector.h  WmiPersistenceCollector.cpp
src/uboot-collector/core/backup/: BackupStore.cpp  BackupStore.h
src/uboot-collector/core/hardening/: CriticalList.cpp  CriticalList.h  DependencyAnalyzer.h  PolicyInspector.cpp  PolicyInspector.h  SecurityLog.cpp  SecurityLog.h
src/uboot-collector/core/ops/: OperationFactory.cpp  OperationFactory.h  RegistryRenameValueOp.h  ServiceStartTypeOp.cpp  ServiceStartTypeOp.h  TaskToggleEnabledOp.cpp  TaskToggleEnabledOp.h
src/uboot-collector/core/tx/: Transaction.h
src/uboot-collector/evidence/: BUILD_AND_VALIDATION.md  INDEX.md  authenticode.cpp  entry_evidence.cpp  entry_evidence.h  example_usage.cpp  file_probe.cpp  file_probe.h  hashing.cpp  hashing.h  misconfig_checks.cpp  misconfig_checks.h  version_info.cpp
src/uboot-collector/json/: JsonWriter.cpp  JsonWriter.h
src/uboot-collector/normalize/: CommandNormalizer.cpp  CommandNormalizer.h  README.md
src/uboot-collector/resolve/: LnkResolver.cpp
src/uboot-collector/runner/: CollectorRunner.cpp  CollectorRunner.h
src/uboot-collector/scoring/: ISignalEvaluator.h  RulesLoader.cpp  ScoringEngine.h  Types.h
src/uboot-collector/scoring/evaluators/: LolbinEvaluator.h  MissingTargetEvaluator.h  RelativePathEvaluator.h  System32LegitEvaluator.h  UnsignedBinaryEvaluator.h  UserWritableEvaluator.h
src/uboot-collector/scoring/strategies/: WeightedSumStrategy.h
src/uboot-collector/tests/: test_ops.cpp  test_phase3.cpp  test_scoring.cpp
src/uboot-collector/util/: CliArgs.cpp  CliArgs.h  ComUtils.h  CommandResolver.cpp  CommandResolver.h  GlobalLock.cpp
tests/: smoke_tests.py
tests/Uboot.Tests/: AnalysisEngineTests.cs  SnapshotRepositoryTests.cs  Uboot.Tests.csproj
tests/fixtures/: fixtures.py  sample_scan.json
tests/fixtures/fake-llm/: manifest.json
(+4 files in other folders)
